--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   /* text-align: center; */
+  background:black;
+  height: 100%;
+  position: fixed;
+  width: 100%; height: 100%;
+  z-index: 1;
 }
 
 .App-logo {
@@ -12,7 +17,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(255,255,255,.5);
+  background: rgba(0,0,0,.6);
+  /* background-attachment: black; */
 }
 .video-wrapper {
   position: fixed;
@@ -55,6 +61,7 @@
 body {
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 text-transform: uppercase;
+background: rgba(0,0,0,.6);
 }
 
 #wrapper {
@@ -80,8 +87,9 @@ display: none;
 #output {
 font-size: 48px;
 line-height: 48px;
-margin: 60px 0;
+margin: 180px 0 60px;
 min-height: 250px;
+color: white;
 }
 
 noscript {
@@ -100,18 +108,19 @@ margin: 60px 0;
 text-decoration: none;
 /* text-align: center; */
 font-size: 34px;
-color: #000;
+color: white;
 cursor: pointer;
 transition: 1s;
 }
 
 #generate:hover {
-  opacity: .2
+  opacity: .2;
+  /* color: white; */
 }
 
 #generate:hover {
-text-decoration: underline;
-color: black;
+/* text-decoration: underline; */
+/* color: black; */
 }
 
 aside {
