--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,14 @@
   /* text-align: center; */
   background:black;
   height: 100%;
-  position: fixed;
+  position: relative;;
   width: 100%; height: 100%;
-  z-index: 1;
+  /* z-index: 1; */
+}
+
+#root, body {
+  height: 100vh;
+  width: 100%;
 }
 
 .App-logo {
@@ -26,7 +31,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -87,9 +92,16 @@ display: none;
 #output {
 font-size: 48px;
 line-height: 48px;
-margin: 180px 0 60px;
-min-height: 250px;
-color: white;
+margin: 140px 0 60px;
+/* min-height: 250px; */
+color:white;
+}
+
+.content-wrapper {
+  position: absolute;
+  top: 40%; left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 noscript {
